--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
   background-color: black;
   color: white;
   font-family: Arial, sans-serif;
+  background-image: url("images/background1.png");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .box {
@@ -21,6 +24,7 @@ input[type="submit"], button {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
+  margin: 1px;
 }
 
 input[type="submit"]:hover, button:hover {
@@ -66,7 +70,7 @@ section {
   margin-bottom: 20px;
 }
 section h2 {
-  font-size: 32px;
+  font-size: 24px;
   margin-bottom: 10px;
 }
 section ul {
@@ -97,3 +101,143 @@ footer p {
   margin: 0;
   padding: 0;
 }
+.center-form{
+  justify-content: center;
+  display: block;
+  width:25%;
+  margin:auto;
+  border: 3px solid blue;
+  padding: 30px;
+  background-color: rgb(208, 205, 248);
+  color:black;
+  }
+.component_input{
+  justify-content: center;
+  display: block;
+  width:30%;
+  color:black;
+  margin: 20px auto;
+  border: 3px solid blue;
+  padding: 30px;
+  background-color: rgb(208, 205, 248);
+
+  }
+h1{
+  text-align: center;
+  color: blue;
+  top:20px;
+  left:20px;
+  }
+  h3 {
+    font-size: 16px;
+    margin:auto;
+    text-align: center;
+    color: red;
+    justify-content: center;
+  }
+  .container {
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  table td, table th {
+    border: 1px solid #000;
+    padding: 10px;
+  }
+  
+  table th {
+    background-color: #000;
+    color: #fff;
+    text-align: left;
+  }
+  
+  table tr:nth-child(even) {
+    background-color: #222;
+  }
+  
+  table tr:hover {
+    background-color: #444;
+  }
+  
+  a {
+    color: #f00;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: #fff;
+    background-color: #f00;
+  }
+  footer {
+    background-color: #464646;
+    color: #fff;
+    font-size: 12px;
+    padding: 20px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+  .footer-bottom{
+    font-size: 10px;
+    margin-top:5px;
+  }
+  footer p {
+    margin: 0;
+  }
+  
+  footer a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  footer a:hover {
+    text-decoration: underline;
+  }
+  h2{
+    text-align: left;
+    color: red;
+    margin-bottom: 10px;
+  }
+  h4{
+    margin-top:5px;
+    margin-bottom:5px;
+  }
+  form {
+    margin-top: 20px;
+    margin-left: 10px;
+    font-size: 16px;
+    color: #333;
+    font-family: Arial, sans-serif;
+  }
+  
+  label {
+    display: block;
+    margin-top: 20px;
+    margin-left: 10px;
+  }
+  
+  input[type="text"], select {
+    width: 20%;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+  }
+  
+  select {
+    height: 38px;
+  }
+  
+  select option[value="select"] {
+    color: #ccc;
+  }
+  
